@@ -1,3 +1,9 @@
+2013-02-26  Sebastien Binet  <binet@cern.ch>
+
+	* tagging PyUtils-00-13-01
+	* more pyami-4 fixes
+	* M python/scripts/tc_submit_tag.py
+
 2013-02-25  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-13-00
